# zlgcan-driver

./: .gitignore  Cargo.toml  README.md  __init__.py  bitrate.cfg.yaml  pyproject.toml  zlgcan.py  zlgcan_linux.py  zlgcanwrap.py
.github/workflows/: CI.yml
linux/x86_64/zlgcan/: test.c
pip-package/: zlgcan-0.0.1-py3-none-any.whl
src/: lib.rs
windows/x86/zlgcan/: zlgcan.h
windows/x86/zlgcan/kerneldlls/: dll_cfg.ini
windows/x86/zlgcan/kerneldlls/devices_property/: canet-tcp.xml  canfdnet100-tcp.xml  canfdnet400u-udp.xml  canfdnet800u-udp.xml  pci-5010-u.xml  pcie-canfd-400u.xml  usbcan-4e-u.xml  virtual.xml
windows/x86_64/zlgcan/kerneldlls/: USBCAN.xml  VCI_USBCAN2.xml  dll_cfg.ini
windows/x86_64/zlgcan/kerneldlls/devices_property/: can.xml  candtu-200ur.xml  canfdnet-tcp.xml  canfdnet100-udp.xml  canfdnet800u-tcp.xml  canfdwifi-tcp.xml  pcie-canfd-100u-ex.xml  pcie-canfd-200u-ex.xml  pcie-canfd-400u-ex.xml  usbcan1.xml
zlgcan/: __init__.py  _common.py  baudrate.conf.yaml  exceptions.py  linux.py  utils.py  windows.py  zlgcan.py
zlgcan/codes/: __init__.py
zlgcan/drivers/: __init__.py  linux.py  windows.py  zlgcan.py
zlgcan/linux/: baudrate.conf.yaml
zlgcan/linux/x86_64/zlgcan/: test.c
zlgcan/structs/: __init__.py
zlgcan/structs/linux/: can.py
zlgcan/structs/windows/: can.py  gps.py  lin.py
zlgcan/structs/windows/cloud/: gps.py
zlgcan/types/: __init__.py
zlgcan/windows/x86/zlgcan/: zlgcan.h  zlgcan.lib
zlgcan/windows/x86/zlgcan/kerneldlls/devices_property/: candtu.ini  canet-udp.xml  canfdcom-100ie.xml  canfdnet-udp.xml  canfdnet600u-udp.xml  pcie-canfd-200u.xml  pcie-canfd-400u.xml  usbcanfd-100u.xml  usbcanfd-200u.xml
zlgcan/windows/x86_64/zlgcan/: config.h  zlgcan.h  zlgcan.lib
zlgcan/windows/x86_64/zlgcan/kerneldlls/devices_property/: can.xml  canfdwifi-udp.xml  device_locale_strings.xml  pcie-canfd-100u.xml  usbcan-2e-u.xml  usbcan1.xml  usbcan2.xml  usbcan4.xml  usbcanfd-800u.xml
