[package]
name = "zlgcan-driver-py"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "zlgcan_driver_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.21"
zlgcan_common = { version = "2.0.0-rc2" }
zlgcan_driver = { version = "2.0.0-rc2" }